# CustomWebBrowser

./: .gitignore  BrowsersAndTheWeb.txt  DownloadingWebPages.txt  HistoryWeb.txt  README.md  Useful Articles.txt
browser_with_cpp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  StringBuilder.cpp  StringBuilder.hpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  telnet_with_cpp_linux.cpp  telnet_with_cpp_windows.cpp  telnet_with_cpp_windows.sln  telnet_with_cpp_windows.vcxproj  telnet_with_cpp_windows.vcxproj.filters
browser_with_go/: telnet_with_go_main.go
browser_with_go/extract_text/: ExtractTextFromHtml.go
browser_with_go/make_request/: MakeRequest.go
browser_with_python/: telnet_with_python.py
browser_with_rust/: dump
browser_with_rust/ssl_connection_with_reqwest/: Cargo.toml
browser_with_rust/ssl_connection_with_reqwest/src/: main.rs
browser_with_rust/ssl_with_tcpstream/: Cargo.toml
browser_with_rust/ssl_with_tcpstream/src/: main.rs
browser_with_rust/telnet_with_rust/: Cargo.toml
browser_with_rust/telnet_with_rust/src/: main.rs
browser_with_rust/telnet_with_rust_https/: Cargo.toml
browser_with_rust/telnet_with_rust_https/src/: main.rs
browser_with_rust/telnet_with_rustls/: Cargo.toml
browser_with_rust/telnet_with_rustls/src/: main.rs
